# chino-acm-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docker/: Dockerfile
example/: CMakeLists.txt
example/divBlock/: CMakeLists.txt  main.cpp
example/fastModulo/: CMakeLists.txt  main.cpp
example/modInt/: CMakeLists.txt  main.cpp
example/rescanTreeDP/codeforces-708C/: CMakeLists.txt  rescanTreeDP.cpp
example/segmentTree/luogu-P1083/: CMakeLists.txt  main.cpp  problem.md
example/segmentTree/luogu-P3372/: CMakeLists.txt  main.cpp  problem.md
example/segmentTreeDivide/codeforces-813F/: CMakeLists.txt  main.cpp  problem.md
example/segmentTreeDivide/codeforces-813F/fullcode/: main.cpp
example/segmentTreeDivide/luogu-P5787/: CMakeLists.txt  main.cpp  problem.md
example/segmentTreeDivide/luogu-P5787/fullcode/: main.cpp
latex/: cppFileToTex.py  main.tex  makefile
lightweight/: segmentTree.cpp  segmentTreeDivide.cpp
playground/: CMakeLists.txt  main.cpp
template/: CMakeLists.txt
template/dataStructure/: CMakeLists.txt  cdqDivide.h  rollbackArray.h  rollbackDisjointSetUnion.h  segmentTreeBase.h  segmentTreeDivide.h  segmentTreeSimpleAdd.h  segmentTreeSimpleMin.h
template/dynamicProgramming/: CMakeLists.txt  rescanTreeDP.h  rescanTreeDPEV.h
template/math/: CMakeLists.txt  divBlock.h  fastModulo.h  modInt.h
tutorial/divBlock/: README.md
tutorial/fastModulo/: README.md
tutorial/modInt/: README.md
tutorial/rollbackArray/: README.md
tutorial/rollbackDisjointSetUnion/: README.md
tutorial/segmentTree/: README.md
(+5 files in other folders)
