#segmentTreeDivide
add_subdirectory(segmentTreeDivide/luogu-P5787)
add_subdirectory(segmentTreeDivide/codeforces-813F)
#rescanTreeDP
add_subdirectory(rescanTreeDP/codeforces-708C)
#divBlock
add_subdirectory(divBlock)
#fastModulo
add_subdirectory(fastModulo)
#modInt
add_subdirectory(modInt)
#segmentTree
add_subdirectory(segmentTree/luogu-P3372)
add_subdirectory(segmentTree/luogu-P1083)